# Emlo-session_4

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: datamodule.py  eval.py  infer.py  model.py  train.py
