[project]
name = "session-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=24.10.0",
    "lightning[extra,extras]>=2.5.0.post0",
    "loguru>=0.7.3",
    "rich>=13.9.4",
    "tensorboard>=2.18.0",
    "timm>=1.0.12",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
